# beads-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/bd/: Cargo.toml
crates/bd/src/: cli.rs  context.rs  main.rs  output.rs
crates/bd/src/commands/: admin.rs  agent.rs  branch.rs  children_cmd.rs  cleanup.rs  close.rs  comment.rs  compact.rs  completion.rs  config_cmd.rs  context_cmd.rs  cook.rs  count.rs  create.rs  defer_cmd.rs  delete.rs  dep.rs  detect_pollution.rs  diff_cmd.rs  doctor.rs  dolt.rs  duplicate_cmd.rs  duplicates.rs  edit.rs  export.rs  formula.rs  gate.rs  github.rs  gitlab.rs  graph.rs  history.rs  hook.rs  import.rs  info_cmd.rs  init.rs  jira.rs  kv.rs  label.rs  last_touched.rs  linear.rs  (+45 more)
crates/bd/tests/: integration.rs
crates/beads-config/: Cargo.toml
crates/beads-config/src/: beads_dir.rs  config.rs  lib.rs
crates/beads-core/: Cargo.toml
crates/beads-core/src/: comment.rs  content_hash.rs  dependency.rs  entity.rs  enums.rs  filter.rs  idgen.rs  issue.rs  jsonl.rs  lib.rs  validation.rs
crates/beads-formula/: Cargo.toml
crates/beads-formula/src/: engine.rs  lib.rs  parser.rs  types.rs
crates/beads-git/: Cargo.toml
crates/beads-git/src/: commands.rs  gitdir.rs  lib.rs
crates/beads-lockfile/: Cargo.toml
crates/beads-lockfile/src/: lib.rs
crates/beads-query/: Cargo.toml
crates/beads-query/src/: lib.rs
crates/beads-storage/: Cargo.toml
crates/beads-storage/src/: error.rs  lib.rs  traits.rs
crates/beads-storage/src/sqlite/: comments.rs  config.rs  dependencies.rs  issues.rs  labels.rs  mod.rs  queries.rs  schema.rs  store.rs  transaction.rs
crates/beads-timeparsing/: Cargo.toml
crates/beads-timeparsing/src/: lib.rs
crates/beads-ui/: Cargo.toml
crates/beads-ui/src/: lib.rs  pager.rs  styles.rs  terminal.rs
