[workspace]
resolver = "2"
members = [
    "crates/bd",
    "crates/beads-core",
    "crates/beads-storage",
    "crates/beads-config",
    "crates/beads-query",
    "crates/beads-ui",
    "crates/beads-git",
    "crates/beads-timeparsing",
    "crates/beads-lockfile",
    "crates/beads-formula",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"

# Database
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }

# HTTP (sync)
ureq = { version = "3", features = ["json"] }

# Crypto
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "toml", "env"] }

# Terminal
crossterm = "0.28"
owo-colors = "4"

# Error handling
thiserror = "2"
anyhow = "1"

# File system
fs2 = "0.4"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
pretty_assertions = "1.4"
assert_cmd = "2.0"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
