[package]
name = "beads-formula"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Formula engine for the beads system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
