[package]
name = "beads-timeparsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Time expression parsing for the beads system"

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
