[package]
name = "beads-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI components for the beads system"

[dependencies]
beads-core = { path = "../beads-core" }
crossterm = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
